QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

SVN HEAD

- Setup for the netjack (slave) "net" driver has now sample-rate
  and frames per buffer (period size) settings disabled and/or
  ignored, as those are pretty much auto-detected by default;
  also, a new "netone" backend driver option has been introduced
  (as suggested by Torben Hohn).

- Czech (cs) translation added (by Pavel Fric).

- Fixed some main window keyboard shortcuts. Escape key now closes
  Connections, Patchbay, Status and Messages widgets as usual (bug
  #2871548).

- Fixed glitch on configure portaudio support, specially when the
  library is not detected as available.


0.3.5  2009-09-30  Slipped away!

- Late support for UTF-8 encoded client/port names.

- Allow only one single patchbay connection to or from an exclusive
  socket (mitigating bug #2859119).

- Automatic crash-dump reports, debugger stack-traces (gdb), back-
  traces, whatever, are being introduced as a brand new configure
  option (--enable-stacktrace) and default enabled on debug build
  targets (--enable-debug).

- Probable fix on the audio connections with regard to client/port
  (re)name changes (an ancient bug reported by Fons Adriaensen).

- Portaudio device selector is now available (after a patch handed
  by Torben Hohn and Stephane Letz).

- A couple of primitive D-Bus interface slots have been introduced,
  giving the option to start/stop the jackd server from the system
  bus eg. via dbus-send --system / org.rncbc.qjackctl.start (.stop), 
  (a nice addition supplied by Robin Gareus, thanks).

- New command line option (-a, --active-patchbay=[path]) to specify
  and activate a given patchbay definition file (a simple patch sent
  by John Schneiderman, thanks).

- Added one significant digit to DSP Load percentage status display.

- Tentative support for netjack (slave) by adding the "net" driver to