@@ -3871,6 +3871,25 @@
               </property>
              </widget>
             </item>
+            <item>
+             <widget class="QCheckBox" name="SingletonCheckBox" >
+              <property name="font" >
+               <font>
+                <weight>50</weight>
+                <bold>false</bold>
+               </font>
+              </property>
+              <property name="toolTip" >
+               <string>Whether to restrict to one single application instance (X11)</string>
+              </property>
+              <property name="text" >
+               <string>Single application &amp;instance</string>
+              </property>
+              <property name="shortcut" >
+               <string>Alt+I</string>
+              </property>
+             </widget>
+            </item>
            </layout>
           </item>
           <item row="0" column="1" >
@@ -3997,6 +4016,91 @@
               </property>
              </widget>
             </item>
+            <item>
+             <layout class="QHBoxLayout" >
+              <property name="margin" >
+               <number>0</number>
+              </property>
+              <property name="spacing" >
+               <number>0</number>
+              </property>
+              <item>
+               <widget class="QLabel" name="BaseFontSizeTextLabel" >
+                <property name="font" >
+                 <font>
+                  <weight>50</weight>
+                  <bold>false</bold>
+                 </font>
+                </property>
+                <property name="text" >
+                 <string>&amp;Base font size:</string>
+                </property>
+                <property name="alignment" >
+                 <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                </property>
+                <property name="buddy" >
+                 <cstring>BaseFontSizeComboBox</cstring>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QComboBox" name="BaseFontSizeComboBox" >
+                <property name="font" >
+                 <font>
+                  <weight>50</weight>
+                  <bold>false</bold>
+                 </font>
+                </property>
+                <property name="toolTip" >
+                 <string>Base application font size (pt.)</string>
+                </property>
+                <property name="editable" >
+                 <bool>true</bool>
+                </property>
+                <item>
+                 <property name="text" >
+                  <string>(default)</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text" >
+                  <string>6</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text" >
+                  <string>7</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text" >
+                  <string>8</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text" >
+                  <string>9</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text" >
+                  <string>10</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text" >
+                  <string>11</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text" >
+                  <string>12</string>
+                 </property>
+                </item>
+               </widget>
+              </item>
+             </layout>
+            </item>
            </layout>
           </item>
          </layout>
@@ -4023,7 +4127,7 @@
           <property name="spacing" >
            <number>4</number>
           </property>
-          <item rowspan="2" row="0" column="0" >
+          <item row="0" column="0" >
            <layout class="QVBoxLayout" >
             <property name="margin" >
              <number>0</number>
@@ -4109,34 +4213,10 @@
             </item>
            </layout>
           </item>
-         </layout>
-        </widget>
-       </item>
-       <item>
-        <widget class="QGroupBox" name="DefaultsGroupBox" >
-         <property name="font" >
-          <font>
-           <weight>75</weight>
-           <bold>true</bold>
-          </font>
-         </property>
-         <property name="title" >
-          <string>Defaults</string>
-         </property>
-         <property name="flat" >
-          <bool>true</bool>
-         </property>
-         <layout class="QGridLayout" >
-          <property name="margin" >
-           <number>4</number>
-          </property>
-          <property name="spacing" >
-           <number>4</number>
-          </property>
-          <item row="0" column="0" colspan="2" >
+          <item row="1" column="0" colspan="2" >
            <spacer>
             <property name="orientation" >
-             <enum>Qt::Horizontal</enum>
+             <enum>Qt::Vertical</enum>
             </property>
             <property name="sizeType" >
              <enum>QSizePolicy::Expanding</enum>
@@ -4149,99 +4229,8 @@
             </property>
            </spacer>
           </item>
-          <item row="0" column="2" >
-           <widget class="QLabel" name="BaseFontSizeTextLabel" >
-            <property name="font" >
-             <font>
-              <weight>50</weight>
-              <bold>false</bold>
-             </font>
-            </property>
-            <property name="text" >
-             <string>&amp;Base font size:</string>
-            </property>
-            <property name="alignment" >
-             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-            </property>
-            <property name="buddy" >
-             <cstring>BaseFontSizeComboBox</cstring>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="3" >
-           <widget class="QComboBox" name="BaseFontSizeComboBox" >
-            <property name="font" >
-             <font>
-              <weight>50</weight>
-              <bold>false</bold>
-             </font>
-            </property>
-            <property name="toolTip" >
-             <string>Base application font size (pt.)</string>
-            </property>
-            <property name="editable" >
-             <bool>true</bool>
-            </property>
-            <item>
-             <property name="text" >
-              <string>(default)</string>
-             </property>
-            </item>
-            <item>
-             <property name="text" >
-              <string>6</string>
-             </property>
-            </item>
-            <item>
-             <property name="text" >
-              <string>7</string>
-             </property>
-            </item>
-            <item>
-             <property name="text" >
-              <string>8</string>
-             </property>
-            </item>
-            <item>
-             <property name="text" >
-              <string>9</string>
-             </property>
-            </item>
-            <item>
-             <property name="text" >
-              <string>10</string>
-             </property>
-            </item>
-            <item>
-             <property name="text" >
-              <string>11</string>
-             </property>
-            </item>
-            <item>
-             <property name="text" >
-              <string>12</string>
-             </property>
-            </item>
-           </widget>
-          </item>
          </layout>
         </widget>
-	   </item>
-       <item>
-        <spacer>
-         <property name="orientation" >
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeType" >
-          <enum>QSizePolicy::MinimumExpanding</enum>
-         </property>
-         <property name="sizeHint" >
-          <size>
-           <width>8</width>
-           <height>8</height>
-          </size>
-         </property>
-        </spacer>
        </item>
       </layout>
      </widget>
@@ -4386,16 +4375,17 @@
   <tabstop>SystemTrayCheckBox</tabstop>
   <tabstop>StartMinimizedCheckBox</tabstop>
   <tabstop>DelayedSetupCheckBox</tabstop>
+  <tabstop>SingletonCheckBox</tabstop>
   <tabstop>ServerConfigCheckBox</tabstop>
   <tabstop>ServerConfigNameComboBox</tabstop>
   <tabstop>ServerConfigTempCheckBox</tabstop>
   <tabstop>QueryShutdownCheckBox</tabstop>
   <tabstop>AlsaSeqEnabledCheckBox</tabstop>
+  <tabstop>BaseFontSizeComboBox</tabstop>
   <tabstop>LeftButtonsCheckBox</tabstop>
   <tabstop>RightButtonsCheckBox</tabstop>
   <tabstop>TransportButtonsCheckBox</tabstop>
   <tabstop>TextLabelsCheckBox</tabstop>
-  <tabstop>BaseFontSizeComboBox</tabstop>
   <tabstop>OkPushButton</tabstop>
   <tabstop>CancelPushButton</tabstop>
  </tabstops>
